# shop

./: .gitignore  CMakeLists.txt  README.md  meson_options.txt
data/: application.css  io.elementary.appcenter.appdata.xml.in  io.elementary.appcenter.gresource.xml  io.elementary.appcenter.gschema.xml  meson.build
data/styles/: application.css  categories.css
debian/: changelog  control  copyright  pop-shop.install  rules
src/: CMakeLists.txt  MainWindow.vala  Utils.vala  meson.build
src/Core/: Client.vala  FlatpakBackend.vala  Houston.vala  Package.vala  PackageKitBackend.vala  UpdateManager.vala
src/Dialogs/: LicenseDialog.vala
src/Views/: AppInfoView.vala  AppListView.vala  Homepage.vala  InstalledView.vala  SearchView.vala  View.vala
src/Widgets/: Banner.vala  CategoryItem.vala  HumbleButton.vala  PackageRow.vala
src/Widgets/AppContainers/: AbstractAppContainer.vala
src/Widgets/Carousel/: Carousel.vala  CarouselItem.vala
