option('blacklist_file', type : 'string', value : 'appcenter.blacklist', description : 'The name of the file listing blacklisted applications')
option('curated', type : 'boolean', value : false, description : 'Differentiate between apps created for elementary and not')
option('icon', type : 'string', value : 'pop-shop', description : 'The name of the icon')
option('libunity', type : 'boolean', value : true, description : 'Use libunity to show badges')
option('name', type : 'string', value : 'Pop!_Shop', description : 'The name of the application')
option('payments', type : 'boolean', value : false, description : 'Enable payment features and display paid apps')
option('sharing', type : 'boolean', value : false, description : 'Display sharing features, i.e. copyable URLs to apps')
